--- a/document/index.html
+++ b/document/index.html
@@ -2,97 +2,98 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        table {
-            border-collapse: collapse;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    table {
+      border-collapse: collapse;
+    }
 
-        td {
-            border: 1px solid black;
-            padding: 3px 5px;
-        }
-    </style>
+    td {
+      border: 1px solid black;
+      padding: 3px 5px;
+    }
+  </style>
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>1:1</td>
-            <td>2:1</td>
-            <td>3:1</td>
-            <td>4:1</td>
-            <td>5:1</td>
-        </tr>
-        <tr>
-            <td>1:2</td>
-            <td>2:2</td>
-            <td>3:2</td>
-            <td>4:2</td>
-            <td>5:2</td>
-        </tr>
-        <tr>
-            <td>1:3</td>
-            <td>2:3</td>
-            <td>3:3</td>
-            <td>4:3</td>
-            <td>5:3</td>
-        </tr>
-        <tr>
-            <td>1:4</td>
-            <td>2:4</td>
-            <td>3:4</td>
-            <td>4:4</td>
-            <td>5:4</td>
-        </tr>
-        <tr>
-            <td>1:5</td>
-            <td>2:5</td>
-            <td>3:5</td>
-            <td>4:5</td>
-            <td>5:5</td>
-        </tr>
-    </table>
-    <ul>
-        <li>Животные
-            <ul>
-                <li>Млекопитающие
-                    <ul>
-                        <li>Коровы</li>
-                        <li>Ослы</li>
-                        <li>Собаки</li>
-                        <li>Тигры</li>
-                    </ul>
-                </li>
-                <li>Другие
-                    <ul>
-                        <li>Змеи</li>
-                        <li>Птицы</li>
-                        <li>Ящерицы</li>
-                    </ul>
-                </li>
-            </ul>
+  <table>
+    <tr>
+      <td>1:1</td>
+      <td>2:1</td>
+      <td>3:1</td>
+      <td>4:1</td>
+      <td>5:1</td>
+    </tr>
+    <tr>
+      <td>1:2</td>
+      <td>2:2</td>
+      <td>3:2</td>
+      <td>4:2</td>
+      <td>5:2</td>
+    </tr>
+    <tr>
+      <td>1:3</td>
+      <td>2:3</td>
+      <td>3:3</td>
+      <td>4:3</td>
+      <td>5:3</td>
+    </tr>
+    <tr>
+      <td>1:4</td>
+      <td>2:4</td>
+      <td>3:4</td>
+      <td>4:4</td>
+      <td>5:4</td>
+    </tr>
+    <tr>
+      <td>1:5</td>
+      <td>2:5</td>
+      <td>3:5</td>
+      <td>4:5</td>
+      <td>5:5</td>
+    </tr>
+  </table>
+  <ul>
+    <li>Животные
+      <ul>
+        <li>Млекопитающие
+          <ul>
+            <li>Коровы</li>
+            <li>Ослы</li>
+            <li>Собаки</li>
+            <li>Тигры</li>
+          </ul>
         </li>
-        <li>Рыбы
-            <ul>
-                <li>Аквариумные
-                    <ul>
-                        <li>Гуппи</li>
-                        <li>Рыба-ангел</li>
-                    </ul>
-                </li>
-                <li>Морские
-                    <ul>
-                        <li>Морская форель</li>
-                    </ul>
-                </li>
-            </ul>
+        <li>Другие
+          <ul>
+            <li>Змеи</li>
+            <li>Птицы</li>
+            <li>Ящерицы</li>
+          </ul>
         </li>
-    </ul>
-    <script src="dom-navigation.js"></script>
-    <script src="basic-dom-node-properties.js"></script>
+      </ul>
+    </li>
+    <li>Рыбы
+      <ul>
+        <li>Аквариумные
+          <ul>
+            <li>Гуппи</li>
+            <li>Рыба-ангел</li>
+          </ul>
+        </li>
+        <li>Морские
+          <ul>
+            <li>Морская форель</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <script src="dom-navigation.js"></script>
+  <script src="basic-dom-node-properties.js"></script>
+  <script src="modifying-document.js"></script>
 </body>
 
 </html>
